<resources>
    <string name="app_name">Voice of America</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_about">This application is unofficially released based on the daily RSS feeds of Voice of America.
    \n\nDeveloper: Khairul Alam Licon
    \nInstructor: Pham Xuan Lu
    \nInstructor: Nguyen Viet Manh
    \nManager: Chu Anh Tuan\n\n</string>
    <string name="copyright">Copyright \u00a9 2016 : All rights reserved by Framgia Inc.</string>

    <!-- Navigation drawer -->
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="action_about">About</string>
    <string name="drawer_item_voa_main">Website</string>
    <string name="drawer_item_voa_blog">Blog</string>
    <string name="drawer_item_voa_video">Video</string>
    <string name="drawer_item_voa_contact">Contact</string>


    <!-- splash-screen -->
    <string name="splash_loading">Loading...</string>

    <!-- progress bar -->
    <string name="progress_status">0%</string>

    <!-- feed item -->
    <string name="drawer_item_feeds">Feeds</string>
    <string name="published_on">Published on : %s</string>

    <!-- rss feeds categories -->
    <string name="tab_usa_home">Home</string>
    <string name="tab_tech">Technology</string>
    <string name="tab_business">Business</string>
    <string name="tab_health">Health</string>
    <string name="tab_entertainment">Entertainment</string>
    <string name="tab_others">Others</string>
    <string name="tab_others_africa">Africa</string>
    <string name="tab_others_asia">Asia</string>
    <string name="tab_others_middle_east">Middle East</string>
    <string name="tab_others_europe">Europe</string>
    
    <!-- roboto font series -->
    <string name="font_roboto_light">Roboto-Light.ttf</string>
    <string name="font_roboto_regular">Roboto-Regular.ttf</string>

    <!-- error handling data on fragment -->
    <string name="text_touch_to_reload">Please touch to reload</string>
    <string name="text_emoticon_sad">:(</string>
    <string name="text_dialog_title_error">Error</string>
    <string name="text_dialog_title_sorry">Sorry</string>
    <string name="text_dialog_title_warning">Warning!</string>
    <string name="text_dialog_btn_ok">Okay</string>
    <string name="text_dialog_msg_no_data">No data found!</string>
    <string name="text_dialog_msg_no_more_data">No more data found!</string>
    <string name="text_dialog_msg_no_application">No application found! Please install one.</string>
    <string name="text_dialog_msg_no_internet">No internet available!</string>
    <string name="text_dialog_msg_no_host_access">Sorry! Host not found.</string>

    <!-- feed item -->
    <string name="text_dummy_title">Title</string>
    <string name="text_dummy_description">This is a description</string>
    <string name="text_dummy_published_date">3rd May, 2016</string>

    <!-- feed item details -->
    <string name="button_link">Link</string>
    <string name="button_share">Share</string>
    <string name="button_print">Print</string>
    <string name="text_dummy_author">Author Name</string>
    <string name="text_error_image_load">Image not found!</string>

    <!-- history comparing time unit text -->
    <string name="history_not_yet">not yet</string>
    <string name="history_yesterday">yesterday</string>
    <string name="history_seconds_ago">%d seconds ago</string>
    <string name="history_one_second_ago">one second ago</string>
    <string name="history_minutes_ago">%d minutes ago</string>
    <string name="history_one_minute_ago">one minute ago</string>
    <string name="history_hours_ago">%d hours ago</string>
    <string name="history_one_hour_ago">one hour ago</string>
    <string name="history_days_ago">%d days ago</string>
    <string name="history_months_ago">%d months ago</string>
    <string name="history_one_month_ago">one month ago</string>
    <string name="history_years_ago">%d years ago</string>
    <string name="history_one_year_ago">one year ago</string>

    <!-- share constants -->
    <string name="share_via">Share via...</string>

    <!-- printing using pdf -->
    <string name="pdf_dialog_title_print">Pdf to print</string>
    <string name="pdf_dialog_msg_print">Pdf file is successfully created in %s . \n\nYou can print now.</string>
    <string name="pdf_dialog_msg_print_error">No file found!</string>
    <string name="pdf_dialog_msg_sdcard_error">Please check your SD card!</string>
    <string name="pdf_dialog_action_view">View</string>
    <string name="pdf_dialog_action_close">Close</string>

    <!-- pagination status -->
    <string name="pagination_scroll_load_more">Scroll to load...</string>
</resources>