<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_link"
        android:title="@string/button_link"
        android:icon="@drawable/ic_link"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_print"
        android:title="@string/button_print"
        android:icon="@drawable/ic_print"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_share"
        android:title="@string/button_share"
        android:icon="@drawable/ic_share"
        android:visible="true"
        app:showAsAction="always"/>

</menu>