<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_size_dp_4"
    card_view:cardCornerRadius="@dimen/margin_size_dp_12">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_size_dp_4">

        <ImageView
            android:id="@+id/image_thumbnail"
            android:layout_width="@dimen/feed_thumbnail_width"
            android:layout_height="@dimen/feed_thumbnail_height"
            android:layout_margin="@dimen/margin_size_dp_4"
            android:src="@drawable/bg_no_image_available" />

        <com.licon.rssfeeds.ui.widget.TextViewRoboto
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_dp_4"
            android:layout_marginTop="@dimen/margin_size_dp_4"
            android:layout_toRightOf="@+id/image_thumbnail"
            android:gravity="left"
            android:maxLines="2"
            android:text="@string/text_dummy_title"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_sp_24"
            app:font="@string/font_roboto_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_thumbnail"
            android:layout_margin="@dimen/margin_size_dp_4"
            android:orientation="vertical">

            <com.licon.rssfeeds.ui.widget.TextViewRoboto
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="2"
                android:text="@string/text_dummy_description"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_size_sp_14"
                app:font="@string/font_roboto_light" />

            <com.licon.rssfeeds.ui.widget.TextViewRoboto
                android:id="@+id/text_published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:singleLine="true"
                android:text="@string/text_dummy_published_date"
                android:textColor="@color/color_gray_rgb_95"
                android:textSize="@dimen/text_size_sp_12"
                app:font="@string/font_roboto_light" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>